--- a/index.html
+++ b/index.html
@@ -1,36 +1,62 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inici</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="images/favicon.png" alt="Logo" class="header__image me-2">
-                <p class="mb-0" style="background: #4C4B89; padding: .5rem 3rem; ">LearnFi</p>
-            </a>
-          
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Inici</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="sanitize.css" />
+        <link rel="stylesheet" href="style.css" />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"
+        ></script>
+    </head>
+    <body>
+        <header class="d-flex justify-content-center">
+            <nav class="d-flex justify-content-between col-11 mt-2">
+                <div class="d-flex flex-grow-1" style="flex-basis: 0">
+                    <a
+                        class="d-flex align-items-center"
+                        href="#"
+                        style="color: #fff"
+                    >
+                        <img
+                            src="images/favicon.png"
+                            alt="Logo"
+                            class="header__image me-2"
+                        />
+                        <p
+                            class="mb-0"
+                            style="background: #4c4b89; padding: 0.5rem 3rem"
+                        >
+                            LearnFi
+                        </p>
+                    </a>
+                </div>
+                <ul class="list-unstyled d-flex align-items-center">
+                    <li class="mx-5 nav__item">Lliçons</li>
+                    <li class="mx-5 nav__item">Teoria</li>
+                </ul>
+                <div
+                    class="d-flex flex-grow-1 justify-content-end"
+                    style="flex-basis: 0"
+                >
+                    <a href="#">
+                        <img
+                            src="images/favicon.png"
+                            class="header__image me-2"
+                            alt=""
+                        />
+                    </a>
+                </div>
+            </nav>
+        </header>
+    </body>
 </html>
