add new classes

--- a/index.html
+++ b/index.html
@@ -30,28 +30,33 @@
                         <img
                             src="images/favicon.png"
                             alt="Logo"
-                            class="header__image me-2"
+                            class="header__logo me-2"
                         />
                         <p
-                            class="mb-0"
-                            style="background: #4c4b89; padding: 0.5rem 3rem"
+                            class="mb-0 py-2 px-2 px-lg-5 px-sm-4 px-xl-5"
+                            style="background: #4c4b89"
                         >
                             LearnFi
                         </p>
                     </a>
                 </div>
                 <ul class="list-unstyled d-flex align-items-center">
-                    <li class="mx-5 nav__item">Lliçons</li>
-                    <li class="mx-5 nav__item">Teoria</li>
+                    <li class="mx-1 mx-xl-5 mx-md-3 nav__item">
+                        Lliçons
+                    </li>
+                    <li class="mx-1 mx-xl-5 mx-md-3 nav__item">
+                        Teoria
+                    </li>
                 </ul>
                 <div
                     class="d-flex flex-grow-1 justify-content-end"
                     style="flex-basis: 0"
                 >
-                    <a href="#">
+                    <a href="#" class="border border-2 border-black rounded-circle d-flex justify-content-center align-items-center header__logo">
                         <img
-                            src="images/favicon.png"
-                            class="header__image me-2"
+                            src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRa9QlrNDT8NNM4FHaxIYZszOl1y5h6jVnpK06DjySyIm5sEf4J"
+                            class="rounded-circle"
+                            style="max-width: 100%; max-height: 100%;"
                             alt=""
                         />
                     </a>
