adjust web design

--- a/index.html
+++ b/index.html
@@ -41,27 +41,63 @@
                     </a>
                 </div>
                 <ul class="list-unstyled d-flex align-items-center">
-                    <li class="mx-1 mx-xl-5 mx-md-3 nav__item">
-                        Lliçons
-                    </li>
-                    <li class="mx-1 mx-xl-5 mx-md-3 nav__item">
-                        Teoria
-                    </li>
+                    <li class="mx-1 mx-xl-5 mx-md-3 nav__item">Lliçons</li>
+                    <li class="mx-1 mx-xl-5 mx-md-3 nav__item">Teoria</li>
                 </ul>
                 <div
                     class="d-flex flex-grow-1 justify-content-end"
                     style="flex-basis: 0"
                 >
-                    <a href="#" class="border border-2 border-black rounded-circle d-flex justify-content-center align-items-center header__logo">
+                    <a
+                        href="#"
+                        class="border border-2 border-black rounded-circle d-flex justify-content-center align-items-center header__logo"
+                    >
                         <img
                             src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRa9QlrNDT8NNM4FHaxIYZszOl1y5h6jVnpK06DjySyIm5sEf4J"
                             class="rounded-circle"
-                            style="max-width: 100%; max-height: 100%;"
+                            style="max-width: 100%; max-height: 100%"
                             alt=""
                         />
                     </a>
                 </div>
             </nav>
         </header>
+        <main
+            class="d-flex justify-content-center align-items-center flex-column text-center main__wrapper"
+        >
+            <section class="main__section">
+                <h2>Teoria</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Quibusdam non, nisi accusamus quisquam laboriosam dolor
+                    libero repellendus voluptatem, aut itaque possimus dolorem
+                    animi voluptatum atque dolorum quo consectetur sunt aliquid?
+                </p>
+                <button class="mb-5">Anar a Teoria</button>
+            </section>
+            <section class="main__section">
+                <h2>Lliçons</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Veniam unde ratione corrupti explicabo illum iste dolore,
+                    saepe perferendis provident sunt ullam odio nulla ipsa nisi
+                    id temporibus impedit officiis? Sint!
+                </p>
+                <button class="mb-5">Anar a Lliçons</button>
+            </section>
+            <section class="main__section">
+                <h2>Qui som?</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Molestiae nesciunt labore unde ea aliquid rem. Asperiores
+                    deserunt officiis obcaecati, eum velit labore blanditiis
+                    error incidunt doloribus eius architecto libero quae.
+                </p>
+                <button>Anar a Qui som?</button>
+            </section>
+        </main>
+        <footer>
+            <p></p>
+        </footer>
     </body>
 </html>
