--- a/index.html
+++ b/index.html
@@ -97,7 +97,18 @@
             </section>
         </main>
         <footer>
-            <p></p>
+            <hr class="m-auto mb-3">
+            <div class="col-8 d-flex justify-content-between gap-5 m-auto">
+                <ul class="list-unstyled">
+                    <li><a href="">Avís Legal</a></li>
+                    <li><a href="">Politica de cookies</a></li>
+                    <li><a href="">Contacte</a></li>
+                </ul>
+                <div class="d-flex align-items-end m-">
+                    <p class="footer__paragraph">Una bona gestió financera marca una vida</p>
+                </div>
+                <img src="images/favicon.png" alt="" class="header__logo">
+            </div>
         </footer>
     </body>
 </html>
