improve web design

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     </a>
                 </div>
                 <ul class="list-unstyled d-flex align-items-center">
-                    <li class="mx-1 mx-xl-5 mx-md-3 nav__item">Lliçons</li>
-                    <li class="mx-1 mx-xl-5 mx-md-3 nav__item">Teoria</li>
+                    <li class="mx-1 mx-xl-5 mx-md-3 nav__item"><a href="#">Lliçons</a></li>
+                    <li class="mx-1 mx-xl-5 mx-md-3 nav__item"><a href="#">Teoria</a></li>
                 </ul>
                 <div
                     class="d-flex flex-grow-1 justify-content-end"
@@ -63,51 +63,53 @@
             </nav>
         </header>
         <main
-            class="d-flex justify-content-center align-items-center flex-column text-center main__wrapper"
+            class="d-flex align-items-center justify-content-center flex-column text-center main__wrapper"
         >
-            <section class="main__section">
+            <section class="main__section mb-4">
                 <h2>Teoria</h2>
-                <p>
+                <p class="mb-2">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Quibusdam non, nisi accusamus quisquam laboriosam dolor
                     libero repellendus voluptatem, aut itaque possimus dolorem
                     animi voluptatum atque dolorum quo consectetur sunt aliquid?
                 </p>
-                <button class="mb-5">Anar a Teoria</button>
+                <button class="px-2 py-1 rounded-2 section__button">Anar a Teoria</button>
             </section>
-            <section class="main__section">
+            <section class="main__section mb-4">
                 <h2>Lliçons</h2>
-                <p>
+                <p class="mb-2">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Veniam unde ratione corrupti explicabo illum iste dolore,
                     saepe perferendis provident sunt ullam odio nulla ipsa nisi
                     id temporibus impedit officiis? Sint!
                 </p>
-                <button class="mb-5">Anar a Lliçons</button>
+                <button class="px-2 py-1 rounded-2 section__button">Anar a Lliçons</button>
             </section>
-            <section class="main__section">
+            <section class="main__section mb-4">
                 <h2>Qui som?</h2>
-                <p>
+                <p class="mb-2">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Molestiae nesciunt labore unde ea aliquid rem. Asperiores
                     deserunt officiis obcaecati, eum velit labore blanditiis
                     error incidunt doloribus eius architecto libero quae.
                 </p>
-                <button>Anar a Qui som?</button>
-            </section>
+                <button class="px-2 py-1 rounded-2 section__button">Anar a Qui som?</button>
+            </section>  
         </main>
         <footer>
             <hr class="m-auto mb-3">
-            <div class="col-8 d-flex justify-content-between gap-5 m-auto">
-                <ul class="list-unstyled">
-                    <li><a href="">Avís Legal</a></li>
-                    <li><a href="">Politica de cookies</a></li>
-                    <li><a href="">Contacte</a></li>
-                </ul>
-                <div class="d-flex align-items-end m-">
-                    <p class="footer__paragraph">Una bona gestió financera marca una vida</p>
+            <div class="col-8 d-flex justify-content-between align-items-center gap-5 m-auto">
+                <div class="d-flex flex-grow-1" style="flex-basis: 0">
+                    <ul class="list-unstyled">
+                        <li><a href="">Avís Legal</a></li>
+                        <li><a href="">Politica de cookies</a></li>
+                        <li><a href="">Contacte</a></li>
+                    </ul>
                 </div>
-                <img src="images/favicon.png" alt="" class="header__logo">
+                <p class="footer__paragraph">Una bona gestió financera marca una vida</p>
+                <div class="d-flex flex-grow-1 justify-content-end" style="flex-basis: 0">
+                    <img src="images/favicon.png" alt="" class="header__logo">
+                </div>
             </div>
         </footer>
     </body>
